# Brayns

./: .gitsubprojects  CMakeLists.txt  Dockerfile  README.md
CMake/: FindSolR.cmake
apps/BraynsViewer/: BraynsViewer.cpp  BraynsViewer.h
apps/ui/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt
brayns/: Brayns.cpp  CMakeLists.txt  EngineFactory.cpp
brayns/common/: CMakeLists.txt  Transformation.h  commonTypes.h  types.h
brayns/common/camera/: Camera.cpp  Camera.h  FlyingModeManipulator.cpp
brayns/common/engine/: Engine.h
brayns/common/geometry/: Plane.cpp  Plane.h
brayns/common/light/: DirectionalLight.h
brayns/common/loader/: Loader.h
brayns/common/material/: Material.cpp  Material.h
brayns/common/renderer/: FrameBuffer.cpp  FrameBuffer.h  Renderer.h
brayns/common/scene/: ClipPlane.h  Model.cpp  Model.h  Scene.cpp  Scene.h
brayns/common/simulation/: AbstractSimulationHandler.cpp  AbstractSimulationHandler.h  AbstractUserDataHandler.cpp  AbstractUserDataHandler.h  CADiffusionSimulationHandler.cpp  CADiffusionSimulationHandler.h
brayns/common/transferFunction/: TransferFunction.cpp  TransferFunction.h
brayns/common/utils/: ImageUtils.cpp  ImageUtils.h
brayns/common/vocabulary/: parameters.fbs  scene.fbs
brayns/engineapi/: FrameBuffer.h
brayns/io/: CMakeLists.txt  CircuitLoader.cpp  CircuitLoader.h  MeshLoader.cpp  MeshLoader.h  MolecularSystemReader.cpp  MolecularSystemReader.h  MorphologyLoader.cpp  MorphologyLoader.h  NESTLoader.cpp  NESTLoader.h  ProteinLoader.cpp  ProteinLoader.h  SceneLoader.cpp  SceneLoader.h  TissueSliceLoader.cpp  TissueSliceLoader.h  TransferFunctionLoader.cpp  XYZBLoader.cpp  XYZBLoader.h
brayns/io/algorithms/: MetaballsGenerator.cpp
brayns/io/simulation/: CADiffusionSimulationHandler.cpp  CircuitSimulationHandler.cpp
brayns/parameters/: AnimationParameters.h  ApplicationParameters.cpp  ApplicationParameters.h  GeometryParameters.cpp  GeometryParameters.h  RenderingParameters.cpp  RenderingParameters.h
brayns/tasks/: AddModelFromBlobTask.cpp  AddModelTask.cpp  LoadDataFunctor.cpp  LoadModelFunctor.cpp  LoadModelFunctor.h
doc/: UserGuide.md
engines/optix/: CMakeLists.txt  OptiXCamera.cpp  OptiXCamera.h  OptiXContext.cpp  OptiXContext.h  OptiXEngine.cpp  OptiXEngine.h  OptiXFrameBuffer.cpp  OptiXFrameBuffer.h  OptiXMaterial.cpp  OptiXMaterial.h  OptiXModel.cpp  OptiXModel.h  OptiXRenderer.cpp  OptiXRenderer.h  OptiXScene.cpp  OptiXScene.h  OptiXUtils.cpp  OptiXUtils.h  OptiXVolume.cpp  OptiXVolume.h
engines/optix/cuda/: CommonStructs.h  Constantbg.cu
engines/optix/cuda/camera/: PerspectiveCamera.cu
engines/optix/cuda/geometry/: Cones.cu  Cylinders.cu  Spheres.cu
engines/optix/cuda/renderer/: AdvancedSimulationRenderer.cu  AdvancedSimulationRenderer.h  BasicRenderer.cu  BasicRenderer.h  VolumeRenderer.h
engines/ospray/: CMakeLists.txt  OSPRayCamera.cpp  OSPRayCamera.h  OSPRayEngine.cpp  OSPRayEngine.h  OSPRayFrameBuffer.cpp  OSPRayFrameBuffer.h  OSPRayMaterial.cpp  OSPRayModel.cpp  OSPRayRenderer.cpp  OSPRayScene.cpp  OSPRayScene.h
engines/solr/: CMakeLists.txt  SolRCamera.cpp  SolRCamera.h  SolREngine.cpp  SolREngine.h  SolRFrameBuffer.cpp  SolRFrameBuffer.h  SolRMaterial.cpp  SolRMaterial.h  SolRModel.cpp  SolRModel.h  SolRRenderer.cpp  SolRRenderer.h  SolRScene.cpp  SolRScene.h  SolRVolume.cpp  SolRVolume.h
ospray_modules/: CMakeLists.txt
ospray_modules/optix/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/CircuitExplorerPlugin/: CMakeLists.txt  CircuitExplorerPlugin.cpp  CircuitExplorerPlugin.h  README.md  log.h  types.h
plugins/DeflectPlugin/: DeflectPlugin.cpp
plugins/RocketsPlugin/: ImageGenerator.cpp  ImageGenerator.h  RocketsPlugin.cpp  (+1 more)
tests/: CMakeLists.txt  ClientServer.h  PDiffHelpers.h  brayns.cpp  clipPlaneRendering.cpp
(+98 files in other folders)
